RESOLVED FIXED50634
[GTK] clears the subresources prematurely
https://bugs.webkit.org/show_bug.cgi?id=50634
Summary [GTK] clears the subresources prematurely
Gustavo Noronha (kov)
Reported 2010-12-07 09:16:07 PST
We currently clear subresources when a provisional load is started. If that load is stopped, we end up with a WebDataSource with 0 subresources in the page that is already loaded. A simple way to test this: in Epiphany go to debian.org, wait for it to load, try to save the page. You will notice an HTML file is saved, and a directory is created with the subresources. Now, enter gnome.org, hit enter and quickly hit stop so it doesn't actually load. Try saving the page again, and you'll see only the HTML file is saved - no subresources.
Attachments
proposed fix (9.39 KB, patch)
2010-12-07 09:25 PST, Gustavo Noronha (kov)
mrobinson: review+
Gustavo Noronha (kov)
Comment 1 2010-12-07 09:25:56 PST
Created attachment 75823 [details] proposed fix This fixes the manual test case I mentioned, and adds an API test.
Martin Robinson
Comment 2 2010-12-07 09:36:11 PST
Comment on attachment 75823 [details] proposed fix Great. Thanks.
WebKit Review Bot
Comment 3 2010-12-07 10:17:37 PST
Attachment 75823 [details] did not pass style-queue: Failed to run "[u'git', u'reset', u'--hard', u'refs/remotes/trunk']" exit_code: 128 error: Could not write new index file. fatal: Could not reset index file to revision 'refs/remotes/trunk'. If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 4 2010-12-07 11:18:43 PST
Attachment 75823 [details] did not pass style-queue: Failed to run "[u'git', u'reset', u'--hard', u'refs/remotes/trunk']" exit_code: 128 error: Could not write new index file. fatal: Could not reset index file to revision 'refs/remotes/trunk'. If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 5 2010-12-07 12:20:07 PST
Attachment 75823 [details] did not pass style-queue: Failed to run "[u'git', u'reset', u'--hard', u'refs/remotes/trunk']" exit_code: 128 error: Could not write new index file. fatal: Could not reset index file to revision 'refs/remotes/trunk'. If any of these errors are false positives, please file a bug against check-webkit-style.
Gustavo Noronha (kov)
Comment 6 2010-12-07 13:00:48 PST
WebKit Review Bot
Comment 7 2010-12-07 21:41:40 PST
Attachment 75823 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/update-webkit']" exit_code: 2 Updating OpenSource Incomplete data: Delta source ended unexpectedly at /usr/lib/git-core/git-svn line 5061 Died at WebKitTools/Scripts/update-webkit line 132. If any of these errors are false positives, please file a bug against check-webkit-style.
Note You need to log in before you can comment on or make changes to this bug.