2010-12-07  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

Reviewed by Martin Robinson.

        [GTK] clears the subresources prematurely
        https://bugs.webkit.org/show_bug.cgi?id=50634

        Make adding the main resource explicit, and only clear
        subresources when the new load is committed, avoid clearing them
        prematurely.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::assignIdentifierToInitialRequest):
        (WebKit::FrameLoaderClient::provisionalLoadStarted):
        (WebKit::FrameLoaderClient::prepareForDataSourceReplacement):
        (WebKit::postCommitFrameViewSetup):
        * tests/testwebdatasource.c:
        (notify_load_status_lifetime_cb):
        (test_webkit_web_data_source_lifetime):
        (main):
        * webkit/webkitprivate.h:
        * webkit/webkitwebview.cpp:
        (webkit_web_view_add_main_resource):
        (webkit_web_view_add_resource):
        (webkit_web_view_clear_resources):

Canonical link: https://commits.webkit.org/63871@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73455 268f45cc-cd09-0410-ab3c-d52691b4dbfc